--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
 
     <script>
         // --- Configuration ---
-        // !!! ATTENTION : CLÉS API EXPOSÉES - À NE PAS UTILISER EN PRODUCTION !!!
-        const ORS_API_KEY = '5b3ce3597851110001cf62489d9781999d1f4138b304095132487153'; // REMPLACEZ PAR VOTRE CLÉ ORS (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
-        const GEMINI_API_KEY = 'AIzaSyAUL7AzflndpPJXOsniLCg6SrpZ5_eXBvk'; // REMPLACEZ PAR VOTRE CLÉ GEMINI (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
+        // 
+        const ORS_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ ORS (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
+        const GEMINI_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ GEMINI (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
         // !!! ------------------------------------------------------------- !!!
         const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${GEMINI_API_KEY}`;
         const BOUNDING_BOX_MARGIN = 0.15; // Marge en degrés (~15-16km)
