Add warning for exposed API keys in configuration

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
     <script>
         // --- Configuration ---
-        // 
+        // !!! ATTENTION : CLÉS API EXPOSÉES - À NE PAS UTILISER EN PRODUCTION !!!
         const ORS_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ ORS (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
         const GEMINI_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ GEMINI (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
         // !!! ------------------------------------------------------------- !!!
