--- a/index.html
+++ b/index.html
@@ -315,9 +315,8 @@
 
     <script>
         // --- Configuration ---
-        // !!! ATTENTION : CLÉS API EXPOSÉES - À NE PAS UTILISER EN PRODUCTION !!!
-        const ORS_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ ORS (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
-        const GEMINI_API_KEY = ''; // REMPLACEZ PAR VOTRE CLÉ GEMINI (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
+        const ORS_API_KEY = '!!!_REMPLACEZ_PAR_VOTRE_CLE_OPENROUTESERVICE_!!!';
+        const GEMINI_API_KEY = '!!!_REMPLACEZ_PAR_VOTRE_CLE_GOOGLE_AI_GEMINI_!!!';
         // !!! ------------------------------------------------------------- !!!
         const GEMINI_API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${GEMINI_API_KEY}`;
         const BOUNDING_BOX_MARGIN = 0.15; // Marge en degrés (~15-16km)
