Update API keys in index_3d.html for OpenRouteService and Google AI Gemini

--- a/index_3d.html
+++ b/index_3d.html
@@ -147,9 +147,8 @@
 
     <script type="module">
         // --- Configuration ---
-        // !!! IMPORTANT: REMPLACEZ CES VALEURS PAR VOS CLÉS API !!!
-        const ORS_API_KEY = '!!!_REMPLACEZ_PAR_VOTRE_CLE_OPENROUTESERVICE_!!!';
-        const GEMINI_API_KEY = '!!!_REMPLACEZ_PAR_VOTRE_CLE_GOOGLE_AI_GEMINI_!!!';
+        const ORS_API_KEY = '5b3ce3597851110001cf62489d9781999d1f4138b304095132487153'; // REMPLACEZ PAR VOTRE CLÉ ORS (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
+        const GEMINI_API_KEY = 'AIzaSyBAYSRgC-ySctMgmjtH5lPsNpPDjMXZXWE'; // REMPLACEZ PAR VOTRE CLÉ GEMINI (OU MIEUX: GÉREZ CÔTÉ SERVEUR)
         // Pas de clé MapLibre ici, car on utilise un style de démo public.
         // Si vous utilisez un style privé (ex: Maptiler), ajoutez votre clé ici ou dans l'URL du style.
 
